objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <label>Account Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <description>the client&apos;s 2nd phone number</description>
        <label>Phone #2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Number_2__c</fullName>
        <label>Account Number #2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Website__c</fullName>
        <description>The company site</description>
        <label>Company Website</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method_2__c</fullName>
        <description>Some new contact info</description>
        <label>Preferred Contact Method #2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <description>The email of the prospect.</description>
        <label>Preferred Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <description>a new phone number for the prospect.</description>
        <label>Preferred Contact Method</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>a brand new description</description>
        <label>Industry</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Address_3__c</fullName>
        <description>an addition of some sorts.</description>
        <label>Main Address #3</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Address__c</fullName>
        <description>a brand new address.</description>
        <label>Main Address #2</label>
        <length>26</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <description>Cell phones are now callable.</description>
        <label>Contact Phone Number</label>
        <type>TextArea</type>
    </fields>
</CustomObject>